--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ jobs:
   include:
     - language: node_js
       node_js: 14
-      python: 3.7
+      python: "3.7.9"
       addons:
         sonarcloud:
           organization: "swsnu"
@@ -14,18 +14,24 @@ jobs:
         - yarn: true
         - pip: true
       install:
+        - source ~/virtualenv/python3.7/bin/activate
         - cd frontend
         - yarn install
         - cd ..
         - cd backend
         - pip3 install -r requirements.txt
         - cd ..
+        - pip3 install coveralls
+        - yarn global add coveralls
+        - gem install converalls-lcov
       script:
         - cd frontend
         - ./node_modules/.bin/eslint src
         - yarn test --coverage --watchAll=false
+        - coveralls-lcov -v -n coverage/lcov.info > coverage.json
         - cd .. && sonar-scanner
         - cd backend
         - pylint **/*.py --load-plugins pylint_django
         - coverage run --source='.' manage.py test
         - coverage xml
+        - coveralls --merge=../frontend/coverage.json
