--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,17 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
+    "@mui/lab": "^5.0.0-alpha.55",
+    "@mui/material": "^5.1.1",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.1.1",
+    "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
